inoa-test/src/test/k3s/test/infrastructure/influxdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: influxdb
